public/css/style.css
/* reset */
* {
	-webkit-box-sizing: border-box;
	   -moz-box-sizing: border-box;
		box-sizing: border-box;

	margin: 0; padding: 0;	
	/* box-sizing means widths are calculated to include paddings and borders */
}

html {
	position: relative;
	min-height: 100%;
}

body {
	background-color: #eee;
	font-family: "Open Sans", sans-serif;
	margin-bottom: 200px;
	padding-bottom: 25px;
}

a{ color: #ec7748; }

.fixed-width {
	width: 80%;
	max-width: 990px;
	margin: 0 auto;
}

@media (max-width: 800px) {
	.fixed-width {
		width: 90%;
	}
}

@media (max-width: 600px) {
	.fixed-width {
		width: 100%;
	}
}

header {
	padding: 15px 10px;
	overflow: hidden; /* acts as a clearfix */
	
	background-color: #223e80;
	color: #fff;
}

.header-logo {
	display: block;
	float: left;
	width: 20%;
	max-width: 140px;
	max-height: 70px;
}

@media (max-width: 600px) {
	.header-logo { width: 80px; }
}

header nav {
	float: right;
	max-width: 80%;
}

@media (max-width: 600px) {
	header nav {
		display: none; 
		max-width: 100%;
		width: 100%;
		margin-top: 20px;
	}
}

header nav ul li {
	display: inline-block;
	
	color: #d8d8d8;

	list-style: none;
	text-transform: uppercase;
}

@media (max-width: 800px) {
	header nav ul li {
		font-size: .75em;
	}
}

@media (max-width: 600px) {
	header nav ul li {
		width: 100%;

		background: rgba(255,255,255,.25);
		border-bottom: 1px solid #aaa;
	}
	
	header nav ul li:hover { background: rgba(255,255,255,.45); }
	
	header nav ul li:last-child { border: none; }
}

header nav ul li a {
	display: block;
	padding: 20px 10px;

	color: inherit;
	text-decoration: none;

	-webkit-transition: color .15s;
			transition: color .15s;
}

header nav ul li a:hover {
	color: #ffffff;
}

header nav ul li.active a {
	color: #ec7748;
}

header .nav-button{
	display: none;
	float: right;
	padding: 10px;

	font-size: .8em;
	text-decoration: none;
	text-transform: uppercase;
	color: white;

	background: rgba(255,255,255,.25);
	border-radius: 5px;
}

@media (max-width: 600px){
	header .nav-button{
		display: block;
	}
}

.hero {
	padding: 15px 0;
	text-align: center;
	
	background-color: #8ca1d1;
}

@media (max-width: 600px) {
	.hero { font-size: .75em; }
}

.hero h1 {
	font-family: 'Yanone Kaffeesatz', sans-serif;
	font-size: 4em;
	color: #ededf5;
	text-shadow: 0 3px 0 rgba(0,0,0,.15);
}

.hero p {
	width: 80%;
	margin: 0 auto;
	padding: 1em;
	line-height: 1.25;
	
	font-size: 1.5em;
	color: #ededf5;
	text-shadow: 0 2px 0 rgba(0,0,0,.15);
}

@media (max-width: 600px) {
	.hero p { width: 100%; }
}

.hero .register-button {
	display: block;
	width: 60%;
	margin: 0 auto;
	padding: .75em .5em;

	font-size: 1.5em;
	text-decoration: none;
	color: #fff;
	
	background-color: #ec7748;
	border-radius: 5px;
	box-shadow: 0 3px 0 rgba(0,0,0,.15);

	-webkit-transition: all .05s;
			transition: all .05s;
}

@media (max-width: 600px) {
	.hero .register-button { width: 80%; }
}

.hero .register-button::after{ content: ' »'; }

.hero .register-button:hover {
	box-shadow: none;
	
	-webkit-transform: translateY(3px);
			transform: translateY(3px);
	
	cursor: pointer;
}

.content{
	padding: 1em .5em;
	overflow: hidden; /* acts as a clearfix */
}

.content section {
	width: 50%;
	float: left;
	padding: .5em;
}

@media (max-width: 600px) {
	.content section { width: 100%; }
}

.content .sponsors {
	overflow: hidden; /* clearfix */
}

.content .sponsor {
	float: left;
	width: 50%;

	height: 250px;

	list-style: none;
}

@media (max-width: 600px) {
	.content .sponsor { width: 100%; }
}

.content .sponsor:nth-child(even) { padding-left: 25px; }
.content .sponsor:nth-child(odd) { padding-right: 25px }

.content .sponsor:nth-child(-n+2) { padding-right: 25px }

@media (max-width: 600px) {
	.content .sponsor:nth-child(even),
	.content .sponsor:nth-child(odd) {
		height: auto;
		padding: 0;
		padding-bottom: 1em;
		margin-bottom: 1em;
		border-bottom: 2px solid #ccc;
	}

	.content .sponsor:last-child{ border: none;	}
}

.content .sponsor img {
	float: right;
	max-width: 50%;
}

.content h1 {
	margin-bottom: .5em;

	font-size: 1.5em;
	color: #2C3C61;
}

.content h2 {
	margin-bottom: .5em;

	font-size: 1.25em;
	color: #494D57;
}

.content p {
	color: #333;
	padding: .5em 0;
}

.announcement {
	position: relative;
	padding: .5em;
	width: 50%;
	margin: 20px auto;
	
	font-size: 1.15em;
	color: #555;
	text-align: center;
	
	background: rgba(0,0,0,.15);
	border-radius: 10px;
	border-bottom-left-radius: 0;
}

.announcement::before {
	content: '';
	position: absolute;
	left: -20px;
	bottom: 0;
	display: block;

	border: 10px solid rgba(0,0,0,.15);
	border-top-color: transparent;
	border-left-color: transparent;
}

@media (max-width: 600px) {
	.announcement {
		width: 85%;
	}
}

.talk-abstract {
	font-size: 80%;
	margin: 10px 10px;
	font-style: italic;
}

footer {
	position: absolute;
	bottom: 0;
	width: 100%;
	height: 200px;
	padding: 1em;

	background-color: #2E2E2E;
	color: #f5f5f5;
	text-align: center;
}

footer .details {
	color: #666;
	font-size: .9em;
}

footer .details a {
	color: inherit;
	font-weight: bold;
	text-decoration: none;
}

footer .details a:hover {
	border-bottom: 2px solid;
}

footer .links{
	width: 60%;
	margin: 0 auto 50px;
	overflow: hidden;
}

@media (max-width: 600px) {
	footer .links{
		width: 100%;
		margin-bottom: 10px; 
	}
}

footer .links li {
	float: left;
	width: 25%;

	font-size: .9em;
	list-style: none;
}

@media (max-width: 600px) {
	footer .links li{ width: 50%; }
}

footer .links li a {
	display: block;
	padding: 1em .25em;

	color: inherit;
	text-decoration: none;

	-webkit-transition: color .05s;
			transition: color .05s;
}

footer .links li a:hover {
	color: #EC7748;
}

